[project]
name = "cellfinder"
description = "Automated 3D cell detection in large microscopy images"
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Adam Tyson, Christian Niedworok, Charly Rousseau", email = "code@adamltyson.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
requires-python = ">=3.10"
dependencies = [
    "brainglobe-utils>=0.5.0",
    "brainglobe-napari-io>=0.3.4",
    "dask[array]",
    "fancylog>=0.0.7",
    "natsort",
    "numba",
    "numpy",
    "scikit-image",
    "scikit-learn",
    "keras>=3.0.0",
    "torch>=2.1.0",
    "tifffile",
    "tqdm",
]
dynamic = ["version"]

[project.entry-points."napari.manifest"]
cellfinder = "cellfinder.napari:napari.yaml"

[project.optional-dependencies]
dev = [
    "black",
    "pre-commit",
    "pyinstrument",
    "pytest-cov",
    "pytest-mock",
    "pytest-qt",
    "pytest-timeout",
    "pytest",
    "tox",
]
napari = [
    "brainglobe-napari-io",
    "magicgui",
    "napari-ndtiffs",
    "napari-plugin-engine >= 0.1.4",
    "napari[pyqt5]",
    "pooch >= 1",
    "qtpy",
]

[project.scripts]
cellfinder_download = "cellfinder.core.download.cli:main"
cellfinder_train = "cellfinder.core.train.train_yml:cli"
cellfinder = "cellfinder.cli_migration_warning:cli_catch"

[project.urls]
Homepage = "https://brainglobe.info/documentation/cellfinder/index.html"
"Source Code" = "https://github.com/brainglobe/cellfinder"
"Bug Tracker" = "https://github.com/brainglobe/cellfinder/issues"
Documentation = "https://brainglobe.info/documentation/cellfinder/index.html"
"User Support" = "https://forum.image.sc/tag/brainglobe"

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = 'setuptools.build_meta'

[tool.black]
target-version = ['py310','py311', 'py312']
skip-string-normalization = false
line-length = 79

[tool.ruff]
line-length = 79
exclude = ["__init__.py", "build", ".eggs"]
select = ["I", "E", "F"]
fix = true

[tool.ruff.isort]
known-first-party = ["cellfinder"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["cellfinder*"]

[tool.setuptools.package-data]
include = ["cellfinder*"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
addopts = "--cov=cellfinder"
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.tox]
legacy_tox_ini = """
# For more information about tox, see https://tox.readthedocs.io/en/latest/
[tox]
envlist = py{310,311,312}
isolated_build = true

[gh-actions]
python =
    3.10: py310
    3.11: py311
    3.12: py312

[testenv]
commands = python -m pytest -v --color=yes --cov=cellfinder --cov-report=xml
extras =
    dev
    napari
setenv =
    KERAS_BACKEND = torch
passenv =
    NUMBA_DISABLE_JIT
    CI
    GITHUB_ACTIONS
    DISPLAY
    XAUTHORITY
    NUMPY_EXPERIMENTAL_ARRAY_FUNCTION
    PYVISTA_OFF_SCREEN
"""
