[project]
name = "cellfinder"
description = "Automated 3D cell detection in large microscopy images"
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Adam Tyson, Christian Niedworok, Charly Rousseau", email = "code@adamltyson.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
requires-python = ">=3.11"
dependencies = [
    "brainglobe-utils>=0.5.0",
    "brainglobe-napari-io>=0.3.4",
    "dask[array]",
    "fancylog>=0.6.0",
    "magicgui",
    "napari-ndtiffs",
    "natsort",
    "numba",
    "numpy",
    "scikit-image",
    "scikit-learn",
    "keras>=3.7.0",
    "pooch >= 1",
    "qtpy",
    "torch>=2.4.1",
    "tifffile",
    "tqdm",
    "qt-niu",
    "monai"
]
dynamic = ["version"]

[project.entry-points."napari.manifest"]
cellfinder = "cellfinder.napari:napari.yaml"

[project.optional-dependencies]
napari = [
    "napari[all]>=0.6.5",
]
dev = [
    "black",
    "cellfinder[napari]",
    "pre-commit",
    "pyinstrument",
    "pytest-cov",
    "pytest-mock",
    "pytest-qt",
    "pytest-timeout",
    "pytest",
    "PyYAML",
    "pooch >= 1",
]

[project.scripts]
cellfinder_download = "cellfinder.core.download.cli:main"
cellfinder_train = "cellfinder.core.train.train_yaml:cli"
cellfinder = "cellfinder.cli_migration_warning:cli_catch"

[project.urls]
Homepage = "https://brainglobe.info/documentation/cellfinder/index.html"
"Source Code" = "https://github.com/brainglobe/cellfinder"
"Bug Tracker" = "https://github.com/brainglobe/cellfinder/issues"
Documentation = "https://brainglobe.info/documentation/cellfinder/index.html"
"User Support" = "https://forum.image.sc/tag/brainglobe"

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = 'setuptools.build_meta'

[tool.black]
target-version = ['py311','py312', 'py313']
skip-string-normalization = false
line-length = 79

[tool.ruff]
line-length = 79
exclude = ["__init__.py", "build", ".eggs"]
select = ["I", "E", "F"]
fix = true

[tool.ruff.isort]
known-first-party = ["cellfinder"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["cellfinder*"]

[tool.setuptools.package-data]
include = ["cellfinder*"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
addopts = "--cov=cellfinder --cov-report=xml -v --color=yes"
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
