[bumpversion]
current_version = 0.3.0-rc9
commit = True
tag = True
tag_name = {new_version}
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)(?P<rc>\d+))?
serialize = 
	{major}.{minor}.{patch}-{release}{rc}
	{major}.{minor}.{patch}

[options]
package_dir = 
	=src
packages = find:

[options.packages.find]
where = src

[bumpversion:part:release]
optional_value = prod
first_value = rc
values = 
	rc
	prod

[bumpversion:part:rc]

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:src/cellfinder_core/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[flake8]
ignore = E203, E231, W503, E722
max-line-length = 79
exclude = __init__.py,build
